--- a/source/index.haml
+++ b/source/index.haml
@@ -11,6 +11,9 @@
       left
     .clear Clear Done
     .clearfix
+    .desc
+      created by halida, 
+      = link_to "source here", "https://github.com/halida/todolist", target: "_blank"
 
 - content_for :scripts do
   = javascript_include_tag "todolist"
