--- a/source/layout.haml
+++ b/source/layout.haml
@@ -53,7 +53,7 @@
 
     / Change UA-XXXXX-X to be your site's ID
     :javascript
-      window._gaq = [['_setAccount','UAXXXXXXXX1'],['_trackPageview'],['_trackPageLoadTime']];
+      window._gaq = [['_setAccount','UA-32998599-1'],['_trackPageview'],['_trackPageLoadTime']];
       Modernizr.load({
         load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
       });
