I change black to #fff

--- a/source/css/todolist.css.sass
+++ b/source/css/todolist.css.sass
@@ -7,7 +7,7 @@
 body
   background: #aaa
   font: 1.6em/1.5em Verdana, sans-serif
-
+  
 
 @mixin font-small
   font-size: 10px
@@ -38,7 +38,7 @@ $c4: #699B00
 
 ::selection
   background: #ccc
-  color: black
+  color: #fff
   text-shadow: none
 
 .todolist
